# sales_final

chatbot-frontend/: .gitignore  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  index.html  package-lock.json  package.json
chatbot-frontend/backend/: main.py  pyproject.toml  requirements.txt
chatbot-frontend/backend/agent/: config.py  graph.py  prompts.py  schemas.py
chatbot-frontend/backend/app/: agent_config.py  auth.py  logger.py  main.py  routes.py  utils.py
chatbot-frontend/backend/app/components/: doc_converter.py
chatbot-frontend/src/: App.jsx  index.css  main.jsx
chatbot-frontend/src/components/: ChatInterface.css  ChatInterface.jsx  ChatSidebar.css  ChatSidebar.jsx  DocumentList.css  DocumentList.jsx
chatbot-frontend/src/contexts/: AuthContext.jsx
chatbot-frontend/src/pages/: Auth.css  Chat.css  Chat.jsx  Home.css  Home.jsx  Login.jsx  Profile.css  Profile.jsx  Signup.jsx
chatbot-frontend/src/services/: api.js
chatbot-frontend/src/utils/: toast.css  toast.js
